--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -36,7 +38,9 @@
   "devDependencies": {
     "eslint": "^8.39.0",
     "eslint-config-wesbos": "^3.2.3",
+    "gh-pages": "^5.0.0",
     "prettier": "^2.8.8",
     "typescript": "^4.9.5"
-  }
+  },
+  "homepage": "http://snaeem3.github.io/memory-game"
 }
